# ebpf-xdp-rust-aya

./: .env  Cargo.toml  Makefile  README.md  identifier.sqlite
.vim/: coc-settings.json
ebpf_front_end/: cfg.css  ebpf.html  get&show.js  post&delete.js
http_server/: .env  Cargo.toml
http_server/src/: errors.rs  main.rs  not_found.rs
http_server/src/block_ip/: delete_block_ip.rs  delete_block_ip_vec.rs  flush.rs  mod.rs  models.rs  read_block_ip.rs  write_block_ip.rs  write_block_ip_vec.rs
http_server/src/kill_restart/: kill.rs  kill_and_restart.rs  mod.rs  restart.rs
http_server/src/package_info/: models.rs  view.rs
http_server/src/route/: mod.rs  my_route.rs
killer/: Cargo.toml
killer/src/: main.rs
runner/: Cargo.toml
runner/src/: main.rs
test-app/: Cargo.toml
test-app-common/: Cargo.toml
test-app-common/src/: lib.rs
test-app-ebpf/: Cargo.toml
test-app-ebpf/src/: main.rs
test-app/src/: main.rs
xtask/: Cargo.toml
xtask/src/: build_ebpf.rs  run.rs
