[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.3"
actix-web = "4.5.1"
dotenvy = "0.15.7"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-native-tls"] }
regex = "1.10.4"
