[package]
name = "test-app"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
clap = { version = "4.5.4", features = ["derive"] }
test-app-common = { path = "../test-app-common", features = ["user"] }
anyhow = "1.0.81"
env_logger = "0.11.3"
libc = "0.2.153"
log = "0.4.21"
tokio = { version = "1.37.0", features = ["full"] }
dotenvy = "0.15.7"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-native-tls"] }


[[bin]]
name = "test-app"
path = "src/main.rs"
